Fix text on mobile devices

--- a/app/styles/components/layout/text.scss
+++ b/app/styles/components/layout/text.scss
@@ -19,7 +19,7 @@ layout-text {
 
 		text-align:center;
 
-		h1, h2, h3, h4, h5, p {
+		h1, h2, h3, h4, h5, h6, p {
 
 			max-width:80%;
 			margin-left:auto;
@@ -38,7 +38,7 @@ layout-text {
 
 		text-align:center;
 
-		h1, h2, h3, h4, h5 {
+		h1, h2, h3, h4, h5, h6 {
 
 			max-width:80%;
 			margin-left:auto;
@@ -70,7 +70,7 @@ layout-text {
 
 		text-align:left;
 
-		h1, h2, h3, h4, h5, p {
+		h1, h2, h3, h4, h5, h6, p {
 
 			max-width:90%;
 			margin-left:0;
